# ai-question-gen

./: 404.html  Dockerfile  README.md  audio.py  cookies.py  final_segbot (1).ipynb  formataudio.py  index.html  index.js  package-lock.json  package.json  requirement.txt  rest_api.py  segmentation.py  sitemap.xml  transcripts.py
ai-question-gen/: pyproject.toml
ai-question-gen-main/: directory_structure.txt  docker-compose.yml  package-lock.json
ai-question-gen/aiquestion-docs/: package-lock.json  package.json
ai-question-gen/aiquestion-docs/docs/Concepts/: _category_.json  api.md  module.md
ai-question-gen/aiquestion-docs/docs/Getting Started/: _category_.json  structure.md  usage.md
ai-question-gen/aiquestion-docs/src/pages/: index.js
ai-question-gen/backend/: .env  model.py
ai-question-gen/frontend/: .env
ai-question-gen/frontend/src/: App.tsx
ai-question-gen/frontend/src/components/: QuestionGenerator.tsx
aiquestion-docs/: docusaurus.config.js
aiquestion-docs/docs/: intro.md
assets/css/: styles.10161984.css  styles.f4a9651f.css
assets/js/: 01a85c17.dd4936bd.js  0e384e19.03dd73d7.js  0e384e19.04cdf25c.js  13a1198a.61f9abf9.js  1448a27e.1fd67812.js  17896441.0755cf9c.js  17896441.5aee2ce7.js  1f391b9e.57808e47.js  1f391b9e.9596e246.js  3042.2284fedc.js  320024bf.5acbdbbb.js  320024bf.cde4e1a4.js  33fc5bb8.857038d9.js  341.b3690395.js  36994c47.a4a1c43d.js  393be207.41eaafcd.js  (+55 more)
backend/: requirements.txt
blog/: atom.xml  index.html  rss.xml
frontend/: package-lock.json
markdown-page/: index.html
react_ts/: requirements.txt
(+45 files in other folders)
