[project]
name = "quegen"
version = "0.1.0"
description = "Dependencies for the question generation application for python backend"
authors = [
    {name = "kja8586",email = "kja8586@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "keras (>=3.9.2,<4.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "transformers (>=4.51.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "yt-dlp (>=2025.3.31,<2026.0.0)",
    "whisper (>=1.1.10,<2.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "openai-whisper (>=20240930,<20240931)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
